Fix lyrics applet settings not saving and restoring font styles

BUG: 222277